# ChangeLog for app-text/gnome-doc-utils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.119 2008/10/07 11:29:57 leio Exp $

*gnome-doc-utils-0.14.0 (07 Oct 2008)

  07 Oct 2008; Mart Raudsepp <leio@gentoo.org>
  +files/gnome-doc-utils-0.14.0-fhs.patch, +gnome-doc-utils-0.14.0.ebuild:
  New version - correctly handles content and tooltips for links to anchor
  elements; does not reprocess book titles when title and bookinfo/title
  exist. FHS patch reworked to not require eautoreconf

  12 Aug 2008; Mart Raudsepp <leio@gentoo.org>
  -gnome-doc-utils-0.10.3.ebuild, gnome-doc-utils-0.12.0.ebuild,
  -gnome-doc-utils-0.12.1.ebuild, -gnome-doc-utils-0.12.2.ebuild:
  Remove old

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gnome-doc-utils-0.12.2-r1 ppc stable for bug 229709

  27 Jul 2008; nixnut <nixnut@gentoo.org> gnome-doc-utils-0.12.2-r1.ebuild:
  Stable on ppc wrt bug 232370

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild:
  alpha/ia64/x86 stable wrt #232370

  22 Jul 2008; Jeroen Roovers <jer@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild:
  Stable for HPPA (bug #232370).

  22 Jul 2008; Markus Rothe <corsair@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild:
  Stable on ppc64; bug #232370

  22 Jul 2008; Daniel Gryniewicz <dang@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild:
  Marked stable on amd64 for bug #232370

  22 Jul 2008; Ferris McCormick <fmccor@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild:
  Sparc stable, Bug #232370 (related to python-2.5).

  05 Jul 2008; <ricmm@gentoo.org> gnome-doc-utils-0.10.3.ebuild:
  Drop to ~mips due to unstable deps

  02 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>