@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/gnome-spell-1.0.8.ebuild,v 1.8 2008/09/30 11:14:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/gnome-spell-1.0.8.ebuild,v 1.9 2008/10/12 10:32:48 eva Exp $
 
 inherit eutils gnome2 autotools
 
@@ -10,6 +10,7 @@ HOMEPAGE="http://www.gnome.org/"
 LICENSE="GPL-2"
 SLOT="1"
 KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+IUSE=""
 
 RDEPEND=">=gnome-base/libgnome-1.112.1
 	>=gnome-base/libbonoboui-1.112.1
@@ -41,5 +42,6 @@ src_unpack() {
 	epatch "${FILESDIR}/${PN}-1.0.7-combo.patch"
 	epatch "${FILESDIR}/${PN}-1.0.7-remove_gnome_h.patch"
 
+	intltoolize --force || die "intltoolize failed"
 	eautoreconf
 }
