@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnome-spell
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.90 2008/09/30 11:14:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.91 2008/10/12 10:32:48 eva Exp $
+
+  12 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  gnome-spell-1.0.8.ebuild:
+  Respect LINGUAS, bug #183086.
 
   30 Sep 2008; Raúl Porcel <armin76@gentoo.org> gnome-spell-1.0.8.ebuild:
   arm stable wrt #223425
