@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnome-doc-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.119 2008/10/07 11:29:57 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.120 2008/10/12 10:31:56 eva Exp $
+
+  12 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  gnome-doc-utils-0.14.0.ebuild:
+  Respect LINGUAS, bug #183086.
 
 *gnome-doc-utils-0.14.0 (07 Oct 2008)
 
